blogger-view/index.css
/*Variables*/
:root {
  --primary: #0065ff;
  --secondary: #609fff;
  --background: #fff;
  --foreground: #000;
}

.darked:root {
  --primary: #00e4ff;
  --secondary: #00abbf;
  --background: #000;
  --foreground: #fff;
}

html {
	font-family: Noto Sans;
	color: var(--foreground);
}

body {
	margin: 0;
	background-color: var(--background);
}

a {
	color: var(--primary);
}

#CloseBtn {
	position: fixed;
	top: 20px;
	right: 20px;
	z-index: 9;
	outline: none;
	border: 1px solid var(--foreground);
	background-color: var(--background);
	box-shadow: 3px 3px var(--foreground);
	color: var(--foreground);
	cursor: pointer;
	border-radius: 7px;
	transition: opacity 0.3s;
	font-size: 2em;
    padding-bottom: 2px;
}

.home,
.disclaimer,
.prelude {
	text-align: center;
}

.prelude {
	text-align: center;
	font-size: 0.8em;
}

.inactive {
	display: none;
}

.content,
.selector {
	max-width: 80vw;
	margin: auto;
	background: var(--background);
}

.post {
	padding: 2px;
}

.post h4 {
	display: inline;
}

.latest {
	border: 1px solid var(--foreground);
	background-color: var(--background);
	box-shadow: 3px 3px var(--foreground);
    margin: 2px;
	padding: 12px;
	width: 150px;
	display: inline-block;
}

.latest:active {
	box-shadow: 1px 1px;
	transform: translate(2px, 2px);
}

.latest .thumb {
	text-align: center;
	width: 100px;
	height: 100px;
    margin: 10px auto;
    background-repeat: no-repeat;
    background-size: contain;
}

.latest h4 {
    margin: 0;
}

.latest a {
    color: var(--primary);
}

.loader,
.selector {
    display: flex;
	justify-content: center;
	align-items: center;
}

.selector {
	height: 100vh;
}

